force-app/main/default/objects/Defect_Assignment__c/Defect_Assignment__c.object-meta.xml
<CustomObject>
    <label>Defect Assignment</label>
    <nameField>
        <label>Defect Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Defect Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>