force-app/main/default/objects/Defect_Assignment__c/fields/Assignment_Number__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Number__c</fullName>
    <displayFormat>{0000}</displayFormat>
    <label>Assignment Number</label>
    <type>AutoNumber</type>
</CustomField>