force-app/main/default/objects/Defect_Assignment__c/fields/Defect_Report__c.field-meta.xml
<CustomField>
    <fullName>Defect_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Defect Report</label>
    <referenceTo>Defect_Report__c</referenceTo>
    <relationshipLabel>Defect Assignments</relationshipLabel>
    <relationshipName>Defect_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>